--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
+<script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
 <h1>githubtestleri</h1>
+
+lanet olası githubda dosya kaydedebiliyor muyuz? site üzerinden dosya günceleyebiliyor muyuz? file write olayı. pff
