--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
 <h1>githubtestleri</h1>
 
-lanet olası githubda dosya kaydedebiliyor muyuz? site üzerinden dosya günceleyebiliyor muyuz? file write olayı. pff
+<p>lanet olası githubda dosya kaydedebiliyor muyuz? site üzerinden dosya günceleyebiliyor muyuz? file write olayı. pff
+</p>
